2014-04-12 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/*/Makefile.in,
	  device/lib/*/*.s,
	  src/z80/main.c:
	  Do not mangle support function names. Implements RFE #405.

2014-04-11 Maarten Brock <sourceforge.brock AT dse.nl>

	* Small Device C Compiler 3.4.0 released
	* .version, doc/sdccman.lyx: changed sdcc version to 3.4.1

2014-04-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/pic16/debug/Makefile.in: regenerated

2014-04-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* Makefile.common.in,
	* Makefile.in: manual edit

2014-04-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* configure
	* debugger/mcs51/aclocal.m4
	* debugger/mcs51/configure
	* device/lib/pic14/aclocal.m4
	* device/lib/pic14/configure
	* device/lib/pic14/depcomp
	* device/lib/pic14/libm/Makefile.in
	* device/lib/pic14/libsdcc/enhanced-no-xinst/Makefile.in
	* device/lib/pic14/libsdcc/enhanced/Makefile.in
	* device/lib/pic14/libsdcc/regular/Makefile.in
	* device/lib/pic14/Makefile.in
	* device/lib/pic16/aclocal.m4
	* device/lib/pic16/configure
	* device/lib/pic16/depcomp
	* device/lib/pic16/install-sh
	* device/lib/pic16/libc/Makefile.in
	* device/lib/pic16/libio/Makefile.in
	* device/lib/pic16/libm/Makefile.in
	* device/lib/pic16/libsdcc/Makefile.in
	* device/lib/pic16/Makefile.in
	* device/lib/pic16/missing
	* device/lib/pic16/startup/Makefile.in
	* device/non-free/lib/pic14/configure
	* device/non-free/lib/pic16/aclocal.m4
	* device/non-free/lib/pic16/configure
	* device/non-free/lib/pic16/depcomp
	* device/non-free/lib/pic16/install-sh
	* device/non-free/lib/pic16/libdev/Makefile.in
	* device/non-free/lib/pic16/Makefile.in
	* device/non-free/lib/pic16/missing
	* sdccconf_in.h
	* sim/ucsim/aclocal.m4
	* sim/ucsim/configure
	* sim/ucsim/ltmain.sh
	* support/cpp/configure
	* support/packihx/configure: regenerated

2014-04-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* configure.in,
	* Makefile.in: manual edit to support option --disable-non-free
